--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/forms": "^0.5.10",
+    "antd": "^5.26.3",
     "apexcharts": "^4.7.0",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
